PharmaDemo/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>twitterforce__Profile_Image_URL__c</fullName>
        <label>Profile Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>twitterforce__Profile_Image__c</fullName>
        <formula>IF( twitterforce__Twitter_Username__c != null, IMAGE( &quot;http://img.tweetimag.es/i/&quot; &amp; twitterforce__Twitter_Username__c &amp; &quot;_n&quot;, twitterforce__Twitter_Username__c, 48, 48 ), &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitterforce__Twitter_User_ID__c</fullName>
        <label>Twitter User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitterforce__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitterforce__View_on_Twitter__c</fullName>
        <formula>if( LEN( twitterforce__Twitter_Username__c ) &gt; 0, HYPERLINK(&quot;http://twitter.com/&quot; &amp; twitterforce__Twitter_Username__c, &quot;View on Twitter&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View on Twitter</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Target__c</columns>
        <columns>Calls_this_Year__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Influence_Icon__c</columns>
        <columns>Advocacy__c</columns>
        <columns>Next_Appointment__c</columns>
        <columns>Last_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Appointmentscomingup</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Next_Appointment__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Influence_Icon__c</columns>
        <columns>Advocacy__c</columns>
        <columns>Last_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Appointment__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Appointments coming up</label>
        <language>en_US</language>
        <sharedTo>
            <group>BigMarkets</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Campaign</fullName>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Spec__c</columns>
        <columns>Influence_Icon__c</columns>
        <columns>Advocacy__c</columns>
        <columns>Primary_Brick_Link__c</columns>
        <columns>Call_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_ACTIVITY</field>
            <operation>lessOrEqual</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Campaign (Competitor List)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>KOL</fullName>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Spec__c</columns>
        <columns>Influence_Icon__c</columns>
        <columns>Advocacy__c</columns>
        <columns>Primary_Brick_Link__c</columns>
        <columns>Call_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KOL__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>KOL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Calls_this_Year__c</columns>
        <columns>Target__c</columns>
        <columns>Target_Calls__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Call_Indicator__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContactsNotSeenRecently</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Target__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Influence_Icon__c</columns>
        <columns>Advocacy__c</columns>
        <columns>Calls_this_Year__c</columns>
        <columns>Call_Indicator__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Target__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_ACTIVITY</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Contacts (Not Seen Recently)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTargets</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Target__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Calls_this_Year__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Influence_Icon__c</columns>
        <columns>Advocacy__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Target__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Targets</fullName>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>Spec__c</columns>
        <columns>Last_Activity__c</columns>
        <columns>Primary_Brick_Link__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Calls_this_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target__c</field>
            <operation>equals</operation>
            <value>High,Medium</value>
        </filters>
        <filters>
            <field>Calls_this_Year__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Targets</label>
        <language>en_US</language>
        <sharedTo>
            <group>BigMarkets</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Targets_not_Seen</fullName>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>Primary_Brick_Link__c</columns>
        <columns>Spec__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>Last_Activity__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Sample_Spend_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>Last_Activity__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Targets not Seen</label>
        <language>en_US</language>
        <sharedTo>
            <group>BigMarkets</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Targets_not_Seen_this_Week</fullName>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>Primary_Brick_Link__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>Spec__c</columns>
        <columns>Last_Activity__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Sample_Spend_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>Last_Activity__c</field>
            <operation>notEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Targets not Seen this Week</label>
        <language>en_US</language>
        <sharedTo>
            <group>BigMarkets</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WoundCare</fullName>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>Primary_Brick_Link__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Last_Activity__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Spec__c</columns>
        <columns>Calls_this_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Spec__c</field>
            <operation>startsWith</operation>
            <value>Wound</value>
        </filters>
        <filters>
            <field>Target__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Wound Care</label>
        <language>en_US</language>
        <sharedTo>
            <group>BigMarkets</group>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>